mobile alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ color:#999;
 .copyright
 {
     background: #000;
-    color:#fff;
+    color:rgb(134, 226, 222);
     text-align:center;
     padding:10px;
 }
